# BADChIMP-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  default.nix  make.sh
.nix/: derivation.nix
PythonScripts/: CMakeLists.txt  geometry_demo.py  geometry_demo_fu.py
examples/: CMakeLists.txt
examples/advective/: main.cpp
examples/blood_flow/: main.cpp
examples/co2/: LBco2help.h  main.cpp
examples/dimAveraging/: LBpartial_mixHelp.h  main.cpp
examples/indicator/: main_INDICATOR.cpp
examples/inouttest/: main.cpp
examples/laplace_fluid/: LBpressureboundary.h  main.cpp
examples/laplace_pressure/: LBdiffusion.h  main.cpp
examples/les/: main_LES.cpp
examples/new_geo/: main_new_geo.cpp
examples/partial_mix/: LBpartial_mixHelp.h  main.cpp
examples/partial_mix2/: LBpartial_mixHelp.h  main.cpp
examples/polymer/: LBsubgridboundary.h  LBsubgridboundaryd.h  main.cpp
examples/polymer_viscosity_tab2/: main.cpp
examples/polymer_viscosity_tabulation/: main.cpp
examples/rans/: LBBoundaryInterpolation.h  LBBoundaryRans.h  LBrans.h  main.cpp  main_test.cpp  ransmain.h
examples/six_dof/: LBrehology.h  LBsixdof.h  main.cpp
examples/std_case/: CMakeLists.txt  main.cpp
examples/std_one_phase/: main.cpp  main_old.cpp
examples/turbine/: LBturbineboundary.h  LBturbineforce.h  main_turbine.cpp
examples/twophase/: main_TWOPHASE.cpp
src/: CMakeLists.txt
src/lbsolver/: CMakeLists.txt
src/std_case/: main.cpp
